--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,4 +15,4 @@ collections:
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
-      - { name: addt, label: Addt'l, widget: markdown }
+      - { name: image, label: Image, widget: image, required: false }
